--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,7 +93,17 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.7.1'
 
 
-    //soinner
+    //spinner
     implementation 'com.jaredrummler:material-spinner:1.3.1'
     implementation 'com.google.android.gms:play-services-location:17.1.0'
+
+
+    //switch
+    implementation 'com.github.zcweng:switch-button:0.0.3@aar'
+
+    //time picker
+    implementation 'com.wdullaer:materialdatetimepicker:4.2.3'
+
+    //pin
+    implementation 'com.chaos.view:pinview:1.4.4'
 }
