--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
-        tools:ignore="LockedOrientationActivity">
+        tools:ignore="LockedOrientationActivity"
+        tools:targetApi="m">
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -34,7 +35,8 @@
         <activity
             android:name=".ui.start.signIn.signInSteps.stepsHome.SignInStepsHome"
             android:screenOrientation="userPortrait"
-            android:windowSoftInputMode="stateAlwaysHidden" />
+            android:windowSoftInputMode="stateVisible|stateAlwaysHidden|adjustResize"
+           />
         <activity
             android:name=".ui.start.signIn.resetPassword.ResetPasswordScreen"
             android:screenOrientation="userPortrait"
@@ -50,7 +52,7 @@
         <activity
             android:name=".ui.start.signIn.mainSignIn.SignInScreen"
             android:screenOrientation="userPortrait"
-            android:windowSoftInputMode="stateVisible|stateAlwaysHidden|adjustResize" />
+            android:windowSoftInputMode="adjustResize"/>
         <activity
             android:name=".ui.home.HomeActivity"
             android:screenOrientation="userPortrait"
@@ -65,6 +67,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat" />
 
         <meta-data
             android:name="preloaded_fonts"
