--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ android {
         exclude 'META-INF/services/javax.annotation.processing.Processor'
     }
     buildTypes.each {
-        it.buildConfigField('String', 'APIKey', APIKey)
+        it.buildConfigField('String', 'BaseUrl', BaseUrl)
     }
 }
 
