--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,10 +20,10 @@
         android:allowBackup="true"
         android:excludeFromRecents="true"
         android:fullBackupContent="true"
-        android:icon="@mipmap/location_ic"
+        android:icon="@mipmap/logo"
         android:label="@string/app_name"
         android:noHistory="true"
-        android:roundIcon="@mipmap/location_ic"
+        android:roundIcon="@mipmap/logo_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
