--- a/gradle.properties
+++ b/gradle.properties
@@ -17,5 +17,5 @@ org.gradle.jvmargs=-Xmx1536m
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
-APIKey="4db1b564ea81c9ee16f38f247886a678"
+BaseUrl="https://www.mohameek-eg.com/api/"
 
