--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -80,7 +80,7 @@
         <activity
             android:name=".ui.start.signIn.signInSteps.stepsHome.SignInStepsHome"
             android:screenOrientation="userPortrait"
-            android:windowSoftInputMode="stateVisible|stateAlwaysHidden|adjustResize" />
+            android:windowSoftInputMode="stateAlwaysHidden" />
         <activity
             android:name=".ui.start.signIn.resetPassword.ResetPasswordScreen"
             android:screenOrientation="userPortrait"
